[Aditya Narayan Gupta] refactor.refactored the backend code for sonar