@@ -1,236 +1,3 @@
-//package com.skybooker.flight.service;
-//
-//import com.skybooker.flight.dto.FlightRequest;
-//import com.skybooker.flight.dto.FlightResponse;
-//import com.skybooker.flight.entity.Flight;
-//import com.skybooker.flight.repository.FlightRepository;
-//import io.jsonwebtoken.Jwts;
-//import io.jsonwebtoken.security.Keys;
-//import lombok.RequiredArgsConstructor;
-//import org.springframework.http.*;
-//import org.springframework.stereotype.Service;
-//import org.springframework.web.client.RestTemplate;
-//
-//import javax.crypto.SecretKey;
-//import java.time.LocalDate;
-//import java.time.LocalDateTime;
-//import java.time.LocalTime;
-//import java.util.*;
-//import java.util.stream.Collectors;
-//
-//@Service
-//@RequiredArgsConstructor
-//public class FlightServiceImpl implements FlightService {
-//
-//    private final FlightRepository flightRepository;
-//    private final RestTemplate restTemplate;
-//
-//    private static final String SEAT_SERVICE_URL = "http://localhost:8086/seats";
-//    private static final String JWT_SECRET = "my-super-secret-key-my-super-secret-key-12345";
-//
-//    @Override
-//    public FlightResponse addFlight(FlightRequest request) {
-//
-//        LocalDate today = LocalDate.now();
-//        LocalDateTime now = LocalDateTime.now();
-//
-//        if (request.getDepartureDate() == null) {
-//            throw new RuntimeException("Departure date is required.");
-//        }
-//        if (request.getDepartureTime() == null || request.getDepartureTime().isBlank()) {
-//            throw new RuntimeException("Departure time is required.");
-//        }
-//
-//        if (request.getDepartureDate().isBefore(today)) {
-//            throw new RuntimeException(
-//                    "Departure date cannot be in the past. " +
-//                            "Please select today or a future date. (Today: " + today + ")"
-//            );
-//        }
-//
-//        if (request.getDepartureDate().isEqual(today)) {
-//            LocalTime depTime;
-//            try {
-//                depTime = LocalTime.parse(request.getDepartureTime());
-//            } catch (Exception e) {
-//                throw new RuntimeException("Invalid departure time format. Use HH:mm (e.g. 14:30).");
-//            }
-//            if (!LocalDateTime.of(request.getDepartureDate(), depTime).isAfter(now)) {
-//                throw new RuntimeException(
-//                        "Departure time has already passed for today. " +
-//                                "Current time is " + now.toLocalTime().withSecond(0).withNano(0) +
-//                                ". Please select a future departure time or a future date."
-//                );
-//            }
-//        }
-//
-//        LocalDate arrivalDate = request.getArrivalDate() != null
-//                ? request.getArrivalDate()
-//                : request.getDepartureDate();
-//
-//        if (arrivalDate.isBefore(request.getDepartureDate())) {
-//            throw new RuntimeException("Arrival date cannot be before departure date.");
-//        }
-//
-//        if (arrivalDate.equals(request.getDepartureDate())) {
-//            if (request.getDepartureTime() != null && request.getArrivalTime() != null
-//                    && !request.getArrivalTime().isBlank()) {
-//                if (request.getArrivalTime().compareTo(request.getDepartureTime()) <= 0) {
-//                    throw new RuntimeException(
-//                            "For same-day flights: arrival time must be after departure time. " +
-//                                    "For overnight flights: set a different arrival date."
-//                    );
-//                }
-//            }
-//        }
-//
-//        Flight flight = new Flight();
-//        flight.setFlightNumber(request.getFlightNumber());
-//        flight.setAirline(request.getAirline());
-//        flight.setSource(request.getSource());
-//        flight.setDestination(request.getDestination());
-//        flight.setDepartureDate(request.getDepartureDate());
-//        flight.setDepartureTime(request.getDepartureTime());
-//        flight.setArrivalDate(arrivalDate);
-//        flight.setArrivalTime(request.getArrivalTime());
-//        flight.setTotalSeats(request.getTotalSeats());
-//        flight.setAvailableSeats(request.getTotalSeats());
-//        flight.setPrice(request.getPrice());
-//        flight.setCreatedAt(LocalDateTime.now());
-//        flight.setUpdatedAt(LocalDateTime.now());
-//
-//        Flight saved = flightRepository.save(flight);
-//        autoGenerateSeats(saved.getId(), request.getTotalSeats());
-//        return mapToResponse(saved);
-//    }
-//
-//    private void autoGenerateSeats(Long flightId, int totalSeats) {
-//
-//        String[] columns = {"A", "B", "C", "D", "E", "F"};
-//        int totalRows    = (int) Math.ceil((double) totalSeats / columns.length);
-//
-//        String internalToken = buildInternalJwt();
-//        HttpHeaders headers  = new HttpHeaders();
-//        headers.setContentType(MediaType.APPLICATION_JSON);
-//        headers.setBearerAuth(internalToken);
-//
-//        int seatsCreated = 0;
-//
-//        for (int row = 1; row <= totalRows && seatsCreated < totalSeats; row++) {
-//            for (int colIdx = 0; colIdx < columns.length && seatsCreated < totalSeats; colIdx++) {
-//
-//                String col        = columns[colIdx];
-//                String seatNumber = row + col;
-//
-//                String seatClass;
-//                if      (row <= 2) seatClass = "FIRST";
-//                else if (row <= 6) seatClass = "BUSINESS";
-//                else               seatClass = "ECONOMY";
-//
-//                // FIX: Jackson boolean 'is' prefix strip karta hai
-//                // SeatRequest mein isWindow field ka JSON key = "window", isAisle = "aisle"
-//                boolean window    = col.equals("A") || col.equals("F");
-//                boolean aisle     = col.equals("C") || col.equals("D");
-//                boolean extraLeg  = (row == 1) || (row == 7);
-//
-//                double priceMultiplier;
-//                if      (seatClass.equals("FIRST"))    priceMultiplier = 3.0;
-//                else if (seatClass.equals("BUSINESS")) priceMultiplier = 2.0;
-//                else                                   priceMultiplier = 1.0;
-//
-//                Map<String, Object> seatReq = new HashMap<>();
-//                seatReq.put("flightId",        flightId);
-//                seatReq.put("seatNumber",       seatNumber);
-//                seatReq.put("seatClass",        seatClass);
-//                seatReq.put("row",              row);
-//                seatReq.put("column",           col);
-//                seatReq.put("window",           window);      // ✅ isWindow → window
-//                seatReq.put("aisle",            aisle);       // ✅ isAisle → aisle
-//                seatReq.put("hasExtraLegroom",  extraLeg);
-//                seatReq.put("priceMultiplier",  priceMultiplier);
-//
-//                HttpEntity<Map<String, Object>> entity = new HttpEntity<>(seatReq, headers);
-//
-//                try {
-//                    restTemplate.postForObject(SEAT_SERVICE_URL, entity, Object.class);
-//                    seatsCreated++;
-//                } catch (Exception e) {
-//                    System.err.println("Seat auto-generate FAILED — seat " + seatNumber
-//                            + " flight " + flightId + ": " + e.getMessage());
-//                }
-//            }
-//        }
-//        System.out.println("Auto-generated " + seatsCreated + "/" + totalSeats
-//                + " seats for flight ID: " + flightId);
-//    }
-//
-//    private String buildInternalJwt() {
-//        SecretKey key = Keys.hmacShaKeyFor(JWT_SECRET.getBytes());
-//        return Jwts.builder()
-//                .setSubject("flight-service-internal")
-//                .claim("role", "AIRLINE_STAFF")
-//                .setIssuedAt(new Date())
-//                .setExpiration(new Date(System.currentTimeMillis() + 1000 * 60 * 5))
-//                .signWith(key)
-//                .compact();
-//    }
-//
-//    @Override
-//    public List<FlightResponse> getAllFlights() {
-//        return flightRepository.findAll()
-//                .stream()
-//                .map(this::mapToResponse)
-//                .collect(Collectors.toList());
-//    }
-//
-//    @Override
-//    public List<FlightResponse> searchFlights(String source, String destination, LocalDate date) {
-//        return flightRepository
-//                .findBySourceAndDestinationAndDepartureDate(source, destination, date)
-//                .stream()
-//                .map(this::mapToResponse)
-//                .collect(Collectors.toList());
-//    }
-//
-//    @Override
-//    public String reduceSeats(Long id, int seats) {
-//        Flight flight = flightRepository.findById(id)
-//                .orElseThrow(() -> new RuntimeException("Flight not found"));
-//
-//        if (flight.getAvailableSeats() < seats) {
-//            throw new RuntimeException("Not enough seats available");
-//        }
-//
-//        flight.setAvailableSeats(flight.getAvailableSeats() - seats);
-//        flightRepository.save(flight);
-//        return "Seats reduced successfully";
-//    }
-//
-//    @Override
-//    public FlightResponse getFlightById(Long id) {
-//        Flight flight = flightRepository.findById(id)
-//                .orElseThrow(() -> new RuntimeException("Flight not found with id: " + id));
-//        return mapToResponse(flight);
-//    }
-//
-//    private FlightResponse mapToResponse(Flight flight) {
-//        FlightResponse res = new FlightResponse();
-//        res.setId(flight.getId());
-//        res.setFlightNumber(flight.getFlightNumber());
-//        res.setAirline(flight.getAirline());
-//        res.setSource(flight.getSource());
-//        res.setDestination(flight.getDestination());
-//        res.setDepartureDate(flight.getDepartureDate());
-//        res.setDepartureTime(flight.getDepartureTime());
-//        res.setArrivalDate(flight.getArrivalDate());
-//        res.setArrivalTime(flight.getArrivalTime());
-//        res.setAvailableSeats(flight.getAvailableSeats());
-//        res.setPrice(flight.getPrice());
-//        return res;
-//    }
-//}
-
-
 package com.skybooker.flight.service;
 
 import com.skybooker.flight.dto.FlightRequest;
@@ -250,7 +17,6 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -269,53 +35,11 @@ public class FlightServiceImpl implements FlightService {
                 request.getFlightNumber(), request.getSource(),
                 request.getDestination(), request.getDepartureDate());
 
-        LocalDate today = LocalDate.now();
-        LocalDateTime now = LocalDateTime.now();
-
-        if (request.getDepartureDate() == null)
-            throw new RuntimeException("Departure date is required.");
-
-        if (request.getDepartureTime() == null || request.getDepartureTime().isBlank())
-            throw new RuntimeException("Departure time is required.");
-
-        if (request.getDepartureDate().isBefore(today)) {
-            log.warn("Flight add rejected — departure date in past: {}", request.getDepartureDate());
-            throw new RuntimeException(
-                    "Departure date cannot be in the past. " +
-                            "Please select today or a future date. (Today: " + today + ")");
-        }
-
-        if (request.getDepartureDate().isEqual(today)) {
-            LocalTime depTime;
-            try {
-                depTime = LocalTime.parse(request.getDepartureTime());
-            } catch (Exception e) {
-                throw new RuntimeException("Invalid departure time format. Use HH:mm (e.g. 14:30).");
-            }
-            if (!LocalDateTime.of(request.getDepartureDate(), depTime).isAfter(now)) {
-                log.warn("Flight add rejected — departure time already passed: {}", request.getDepartureTime());
-                throw new RuntimeException(
-                        "Departure time has already passed for today. " +
-                                "Current time is " + now.toLocalTime().withSecond(0).withNano(0) +
-                                ". Please select a future departure time or a future date.");
-            }
-        }
+        validateFlightRequest(request);
 
         LocalDate arrivalDate = request.getArrivalDate() != null
                 ? request.getArrivalDate()
                 : request.getDepartureDate();
-
-        if (arrivalDate.isBefore(request.getDepartureDate()))
-            throw new RuntimeException("Arrival date cannot be before departure date.");
-
-        if (arrivalDate.equals(request.getDepartureDate())
-                && request.getDepartureTime() != null
-                && request.getArrivalTime() != null
-                && !request.getArrivalTime().isBlank()
-                && request.getArrivalTime().compareTo(request.getDepartureTime()) <= 0)
-            throw new RuntimeException(
-                    "For same-day flights: arrival time must be after departure time. " +
-                            "For overnight flights: set a different arrival date.");
 
         Flight flight = new Flight();
         flight.setFlightNumber(request.getFlightNumber());
@@ -337,6 +61,56 @@ public class FlightServiceImpl implements FlightService {
 
         autoGenerateSeats(saved.getId(), request.getTotalSeats());
         return mapToResponse(saved);
+    }
+
+    private void validateFlightRequest(FlightRequest request) {
+        LocalDate today = LocalDate.now();
+        LocalDateTime now = LocalDateTime.now();
+
+        if (request.getDepartureDate() == null)
+            throw new IllegalArgumentException("Departure date is required.");
+
+        if (request.getDepartureTime() == null || request.getDepartureTime().isBlank())
+            throw new IllegalArgumentException("Departure time is required.");
+
+        if (request.getDepartureDate().isBefore(today)) {
+            log.warn("Flight add rejected — departure date in past: {}", request.getDepartureDate());
+            throw new IllegalArgumentException(
+                    "Departure date cannot be in the past. " +
+                            "Please select today or a future date. (Today: " + today + ")");
+        }
+
+        if (request.getDepartureDate().isEqual(today)) {
+            LocalTime depTime;
+            try {
+                depTime = LocalTime.parse(request.getDepartureTime());
+            } catch (Exception e) {
+                throw new IllegalArgumentException("Invalid departure time format. Use HH:mm (e.g. 14:30).");
+            }
+            if (!LocalDateTime.of(request.getDepartureDate(), depTime).isAfter(now)) {
+                log.warn("Flight add rejected — departure time already passed: {}", request.getDepartureTime());
+                throw new IllegalArgumentException(
+                        "Departure time has already passed for today. " +
+                                "Current time is " + now.toLocalTime().withSecond(0).withNano(0) +
+                                ". Please select a future departure time or a future date.");
+            }
+        }
+
+        LocalDate arrivalDate = request.getArrivalDate() != null
+                ? request.getArrivalDate()
+                : request.getDepartureDate();
+
+        if (arrivalDate.isBefore(request.getDepartureDate()))
+            throw new IllegalArgumentException("Arrival date cannot be before departure date.");
+
+        if (arrivalDate.equals(request.getDepartureDate())
+                && request.getDepartureTime() != null
+                && request.getArrivalTime() != null
+                && !request.getArrivalTime().isBlank()
+                && request.getArrivalTime().compareTo(request.getDepartureTime()) <= 0)
+            throw new IllegalArgumentException(
+                    "For same-day flights: arrival time must be after departure time. " +
+                            "For overnight flights: set a different arrival date.");
     }
 
     private void autoGenerateSeats(Long flightId, int totalSeats) {
@@ -413,7 +187,7 @@ public class FlightServiceImpl implements FlightService {
         Flight flight = flightRepository.findById(id)
                 .orElseThrow(() -> {
                     log.warn("Flight not found — ID: {}", id);
-                    return new RuntimeException("Flight not found with id: " + id);
+                    return new IllegalArgumentException("Flight not found with id: " + id);
                 });
         return mapToResponse(flight);
     }
@@ -422,7 +196,7 @@ public class FlightServiceImpl implements FlightService {
     public List<FlightResponse> getAllFlights() {
         log.debug("Fetching all flights");
         return flightRepository.findAll().stream()
-                .map(this::mapToResponse).collect(Collectors.toList());
+                .map(this::mapToResponse).toList();
     }
 
     @Override
@@ -430,7 +204,7 @@ public class FlightServiceImpl implements FlightService {
         log.info("Searching flights — {} → {}, date: {}", source, destination, date);
         List<FlightResponse> results = flightRepository
                 .findBySourceAndDestinationAndDepartureDate(source, destination, date)
-                .stream().map(this::mapToResponse).collect(Collectors.toList());
+                .stream().map(this::mapToResponse).toList();
         log.info("Search results — {} flight(s) found", results.size());
         return results;
     }
@@ -441,12 +215,12 @@ public class FlightServiceImpl implements FlightService {
         Flight flight = flightRepository.findById(id)
                 .orElseThrow(() -> {
                     log.warn("reduceSeats — flight not found: {}", id);
-                    return new RuntimeException("Flight not found");
+                    return new IllegalArgumentException("Flight not found");
                 });
         if (flight.getAvailableSeats() < seats) {
             log.warn("reduceSeats — not enough seats. available: {}, requested: {}",
                     flight.getAvailableSeats(), seats);
-            throw new RuntimeException("Not enough seats available");
+            throw new IllegalStateException("Not enough seats available");
         }
         flight.setAvailableSeats(flight.getAvailableSeats() - seats);
         flightRepository.save(flight);
